2026/day-62/terraform-aws-infra/main.tf
#VPC - isolated virtual private network
resource "aws_vpc" "my-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "TerraWeek-VPC"
  }
}

#Subent - VPC divided into small network 
resource "aws_subnet" "my-subnet" {
    cidr_block = "10.0.1.0/24"
    vpc_id = aws_vpc.my-vpc.id
    map_public_ip_on_launch = true
  tags = {
    Name = "TerraWeek-Public-Subnet"
  }
}

#Internet Gateway - connects VPC to public internet
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.my-vpc.id
  tags = {
    Name = "TerraWeek-GW"
  }
}

#Route table - route traffic from subnet to internet gateway
resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.my-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
    tags = {
    Name = "TerraWeek-RouteTable"
  }
}

#Link route table to subnet
resource "aws_route_table_association" "rt-association" {
  subnet_id = aws_subnet.my-subnet.id
  route_table_id = aws_route_table.rt.id
}

#AWs security group to allow traffic
resource "aws_security_group" "sg" {
  vpc_id = aws_vpc.my-vpc.id
  ingress {
    description = "Allow ssh"
    cidr_blocks = ["0.0.0.0/0"]
    from_port = 22
    protocol = "tcp"
    to_port = 22
  }
  ingress {
    description = "Allow HTTP"
    cidr_blocks = ["0.0.0.0/0"]
    from_port = 80
    protocol = "tcp"
    to_port = 80
  }
  egress {
    description = "Allow all outbound"
    cidr_blocks = ["0.0.0.0/0"]
    from_port = 0
    protocol = "-1"
    to_port = 0
  }
  tags = {
    Name = "TerraWeek-SG"
  }
}

#Adding key generated by ssh-genkey
resource "aws_key_pair" "my_key_pair" {
  key_name   = "terra-key"
  public_key = file("~/.ssh/terra-key.pub")
}

#aws instance - creating ec2 instance in our PVC
resource "aws_instance" "my-ec2" {
  ami = "ami-0d76b909de1a0595d"
  instance_type = "t3.micro"
  key_name = aws_key_pair.my_key_pair.key_name
  subnet_id = aws_subnet.my-subnet.id
  vpc_security_group_ids = [aws_security_group.sg.id]
  associate_public_ip_address = true
  tags = {
    Name = "TerraWeek-Server"
  }
  lifecycle {
    create_before_destroy = true
  }
}

#s3 bucket creating dependent on ec2 instance
resource "aws_s3_bucket" "s3-bucket" {
  bucket = "terra-week-ec2-logs"
  depends_on = [ aws_instance.my-ec2 ]
  tags = {
    Name = "TerraWeek-S3-Bucket"
  }
}
